# CountSimplePolytope

./: .gitignore  CMakeLists.txt  README.md
examples/: square_2d  unbounded_polyhedron_2d  zero_points_2d
include/: counter.h  ddm.h  dynamic.h  exp_poly.h  global_defs.h  group_element.h  hyperplane_avoid_solver.h  io_handler.h  matrix_tools.h  snf_class.h  todd_poly.h  tools.h
include/SNF/: DF_module.h  gmp_supp.h  utility.h
src/: count.cpp  counter.cpp  ddm.cpp  dynamic.cpp  exp_poly.cpp  group_element.cpp  hyperplane_avoid_solver.cpp  io_handler.cpp  matrix_tools.cpp  snf_class.cpp  todd_poly.cpp  tools.cpp
